--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     ],
     "require": {
         "php": "^7.2.5",
-        "illuminate/support": "^7.0"
+        "illuminate/support": "^7.0 || ^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0",
+        "orchestra/testbench": "^5.0 || ^4.0",
         "phpunit/phpunit": "^8.0"
     },
     "autoload": {
