--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,13 @@
         }
     ],
     "require": {
-        "php": "^7.2.5",
-        "illuminate/log": "^7.0 || ^6.0",
-        "illuminate/support": "^7.0 || ^6.0"
+        "php": "^7.2.5|^8.0",
+        "illuminate/log": "^8.0|^7.0|^6.0",
+        "illuminate/support": "^8.0|^7.0|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0 || ^4.0",
-        "phpunit/phpunit": "^8.0"
+        "orchestra/testbench": "^5.0|^4.0",
+        "phpunit/phpunit": "^9.0|^8.0"
     },
     "autoload": {
         "psr-4": {
