--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "illuminate/support": "^8.0|^7.0|^6.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^5.0|^4.0",
+        "orchestra/testbench": "^6.0|^5.0|^4.0",
         "phpunit/phpunit": "^9.0|^8.0"
     },
     "autoload": {
